--- a/charts/meep-virt-engine/values.yaml
+++ b/charts/meep-virt-engine/values.yaml
@@ -28,6 +28,8 @@ image:
     MEEP_HOST_URL: "http://www.example.com"
     MEEP_USER_SWAGGER: "false"
     MEEP_USER_SWAGGER_DIR: "/path/to/user/swagger"
+    MEEP_SESSION_KEY: "my-session-key"
+    MEEP_HTTPS_ONLY: "false"
 
 service:
   type: ClusterIP
