--- a/charts/meep-metrics-engine/values-template.yaml
+++ b/charts/meep-metrics-engine/values-template.yaml
@@ -17,7 +17,7 @@ image:
   env:
     MEEP_SANDBOX_NAME: {{ .SandboxName }}
     MEEP_HOST_URL: {{ .HostUrl }}
-    MEEP_SESSION_KEY: "my-secret-key"
+    MEEP_SESSION_KEY: {{ .SessionKey }}
 
 service:
   name: meep-metrics-engine
@@ -33,6 +33,7 @@ ingress:
         - /{{ .SandboxName }}/metrics
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: {{ .HttpsOnly }}
     # kubernetes.io/tls-acme: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/configuration-snippet: |
