--- a/playbooks/hosts.ini
+++ b/playbooks/hosts.ini
@@ -11,3 +11,7 @@
 [cluster:children]
 master
 worker
+
+# AdvantEDGE development machine
+[dev]
+#dev1 ansible_host=<dev IP addr> ansible_user=<username>
