--- a/examples/demo2/demo2-scenario.yaml
+++ b/examples/demo2/demo2-scenario.yaml
@@ -81,6 +81,8 @@ deployment:
                                             isExternal: null
                                             environment: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             userChartLocation: null
@@ -119,6 +121,8 @@ deployment:
                                             commandArguments: null
                                             commandExe: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             userChartLocation: null
@@ -300,6 +304,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -331,6 +337,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -411,6 +419,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -442,6 +452,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -496,6 +508,8 @@ deployment:
                                             environment: null
                                             serviceConfig: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             userChartLocation: null
@@ -575,6 +589,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             status: null
                                             userChartLocation: null
                                             userChartAlternateValues: null
@@ -707,6 +723,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -738,6 +756,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
+                                            cpuConfig: null
+                                            memoryConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
