--- a/charts/meep-mon-engine/templates/deployment.yaml
+++ b/charts/meep-mon-engine/templates/deployment.yaml
@@ -44,6 +44,14 @@ spec:
             - name: {{ $key }}
               value: {{ $value }}
             {{- end }}
+            {{- range $key, $value := .Values.image.envSecret }}
+            - name: {{ $key }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $value.name }}
+                  key: {{ $value.key }}
+                  optional: true
+            {{- end }}
           {{- if .Values.codecov.enabled}}
           volumeMounts:
           - name: codecov-storage
