--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -24,15 +24,24 @@ image:
   tag: latest
   pullPolicy: Always
   env:
-    MEEP_SESSION_KEY: "my-secret-key"
     MEEP_MAX_SESSIONS: "10"
-    MEEP_PLATFORM_URI: "https://<my-platform-fqdn>"
-    MEEP_OAUTH_GITHUB_CLIENT_ID: "my-github-client-id"
-    MEEP_OAUTH_GITHUB_REDIRECT_URI: "https://<my-platform-fqdn>/platform-ctrl/v1/authorize"
-    MEEP_OAUTH_GITHUB_SECRET: "my-github-secret"
-    MEEP_OAUTH_GITLAB_CLIENT_ID: "my-gitlab-client-id"
-    MEEP_OAUTH_GITLAB_REDIRECT_URI: "https://<my-platform-fqdn>/platform-ctrl/v1/authorize"
-    MEEP_OAUTH_GITLAB_SECRET: "my-gitlab-secret"
+    MEEP_OAUTH_REDIRECT_URI: "https://<my-platform-fqdn>/platform-ctrl/v1/authorize"
+  envSecret:
+    MEEP_SESSION_KEY:
+      name: meep-session
+      key: encryption-key
+    MEEP_OAUTH_GITHUB_CLIENT_ID:
+      name: github-secret
+      key: client-id
+    MEEP_OAUTH_GITHUB_SECRET:
+      name: github-secret
+      key: secret
+    MEEP_OAUTH_GITLAB_CLIENT_ID:
+      name: gitlab-secret
+      key: client-id
+    MEEP_OAUTH_GITLAB_SECRET:
+      name: gitlab-secret
+      key: secret
 
 service:
   type: ClusterIP
