--- a/examples/demo2/demo2-scenario.yaml
+++ b/examples/demo2/demo2-scenario.yaml
@@ -1,4 +1,4 @@
-version: 1.5.3
+version: 1.5.6
 name: demo2
 deployment:
     netChar:
@@ -81,8 +81,8 @@ deployment:
                                             isExternal: null
                                             environment: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             userChartLocation: null
@@ -121,8 +121,8 @@ deployment:
                                             commandArguments: null
                                             commandExe: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             userChartLocation: null
@@ -154,6 +154,7 @@ deployment:
                                     linkLatencyVariation: null
                                     linkThroughput: null
                                     linkPacketLoss: null
+                                    macId: null
                             terminalLinkLatency: null
                             terminalLinkLatencyVariation: null
                             terminalLinkThroughput: null
@@ -304,8 +305,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -337,8 +338,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -367,6 +368,7 @@ deployment:
                                     linkLatencyVariation: null
                                     linkThroughput: null
                                     linkPacketLoss: null
+                                    macId: null
                             terminalLinkLatency: null
                             terminalLinkLatencyVariation: null
                             terminalLinkThroughput: null
@@ -419,8 +421,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -452,8 +454,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -482,6 +484,7 @@ deployment:
                                     linkLatencyVariation: null
                                     linkThroughput: null
                                     linkPacketLoss: null
+                                    macId: null
                                 -
                                     id: a95c7d87-1086-419b-9525-cf74807492e4
                                     name: ue1
@@ -508,8 +511,8 @@ deployment:
                                             environment: null
                                             serviceConfig: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             userChartLocation: null
@@ -540,6 +543,7 @@ deployment:
                                     linkLatencyVariation: null
                                     linkThroughput: null
                                     linkPacketLoss: null
+                                    macId: null
                                 -
                                     id: a4bff832-de45-4cbb-a54c-17b6b26735ef
                                     name: ue2-ext
@@ -589,8 +593,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             status: null
                                             userChartLocation: null
                                             userChartAlternateValues: null
@@ -620,6 +624,7 @@ deployment:
                                     linkLatencyVariation: null
                                     linkThroughput: null
                                     linkPacketLoss: null
+                                    macId: null
                             terminalLinkLatency: null
                             terminalLinkLatencyVariation: null
                             terminalLinkThroughput: null
@@ -723,8 +728,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -756,8 +761,8 @@ deployment:
                                             commandExe: null
                                             serviceConfig: null
                                             gpuConfig: null
-                                            cpuConfig: null
                                             memoryConfig: null
+                                            cpuConfig: null
                                             externalConfig: null
                                             status: null
                                             meta: null
@@ -786,6 +791,7 @@ deployment:
                                     linkLatencyVariation: null
                                     linkThroughput: null
                                     linkPacketLoss: null
+                                    macId: null
                             terminalLinkLatency: null
                             terminalLinkLatencyVariation: null
                             terminalLinkThroughput: null
