final merge header

--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -31,7 +31,7 @@ repo:
     # platform ingress configuration
     ingress:
       # host name
-      host: my-platform-fqdn
+      host: 10.3.16.150
       # enable https only (redirect http requests to https port)
       https-only: true
       # bind to host ports (true) or node ports (false)
