--- a/charts/meep-platform-ctrl/values.yaml
+++ b/charts/meep-platform-ctrl/values.yaml
@@ -25,7 +25,15 @@ image:
   pullPolicy: Always
   env:
     MEEP_MAX_SESSIONS: "10"
-    MEEP_OAUTH_REDIRECT_URI: "https://<my-platform-fqdn>/platform-ctrl/v1/authorize"
+    MEEP_OAUTH_GITHUB_ENABLED: "false"
+    MEEP_OAUTH_GITHUB_AUTH_URL: ""
+    MEEP_OAUTH_GITHUB_TOKEN_URL: ""
+    MEEP_OAUTH_GITHUB_REDIRECT_URI: ""
+    MEEP_OAUTH_GITLAB_ENABLED: "false"
+    MEEP_OAUTH_GITLAB_AUTH_URL: ""
+    MEEP_OAUTH_GITLAB_TOKEN_URL: ""
+    MEEP_OAUTH_GITLAB_REDIRECT_URI: ""
+    MEEP_OAUTH_GITLAB_API_URL: ""
   envSecret:
     MEEP_SESSION_KEY:
       name: meep-session
