--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -31,8 +31,7 @@ repo:
     # platform ingress configuration
     ingress:
       # host name
-      #host: my-platform-fqdn
-      host: 10.3.16.150
+      host: my-platform-fqdn
       # enable https only (redirect http requests to https port)
       https-only: false
       # bind to host ports (true) or node ports (false)
